Fixed transitions and visibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -71,12 +71,12 @@ h6 {
 
 a {
     text-decoration: none;
-    h3 {
+    h3, h5, h6 {
         transition: 0.5s;
         &:hover, :active {
             color: $accentColor;
         }
-    }
+    }    
 }
 
 p {
@@ -90,6 +90,14 @@ ul {
 
 #roletyper {
     height: 3rem;
+}
+
+.preload {
+    * {
+        animation-duration: 0s !important;
+        -webkit-animation-duration: 0s !important;
+        transition:background-color 0s, opacity 0s, color 0s, width 0s, height 0s, padding 0s, margin 0s !important;
+    }
 }
 
 /* || CONTAINERS */
@@ -133,6 +141,14 @@ ul {
     justify-content: space-around;
     border-radius: 50%;
     z-index: 1500;
+    transition-duration: 1s;
+}
+
+.nav-override {
+    background-color: $accentColor;
+    * {
+        background-color: #0D0D0D;
+    }
 }
 
 .fixed-nav {
@@ -144,11 +160,13 @@ ul {
     left: 0;
     z-index: 1000;
     opacity: 0;
-    transition: opacity 1s
+    transition: 1s;
+    visibility: hidden;
 }
 
 .show {
     opacity: 1;
+    visibility: visible;
 }
 
 .fixed-nav-inner {
